CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)

PROJECT(transform_demo)

FIND_PACKAGE(yaml-cpp REQUIRED)
MESSAGE(STATUS ${YAML_CPP_INCLUDE_DIR})
# MESSAGE(STATUS ${YAML_CPP_LIBRARAIS})
# FIND_PACKAGE(eigen )

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}
                    ${YAML_CPP_INCLUDE_DIR})

SET(SRC_LIST ${CMAKE_SOURCE_DIR}/test.cpp
              ${CMAKE_SOURCE_DIR}/transform.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} yaml-cpp)